# pinnacle_100_base

./: README.md
code/: Kconfig  prj.conf
code/include/: app_version.h
code/src/: lte.c  main.c
oob_demo/: CMakeLists.txt
oob_demo/framework_config/: FrameworkMsgTypes.h
oob_demo/src/: lte.c  main.c
